WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184361
Flex child does not get repainted when it is inserted back to the render tree.
https://bugs.webkit.org/show_bug.cgi?id=184361
Summary
Flex child does not get repainted when it is inserted back to the render tree.
alan
Reported
2018-04-06 10:53:28 PDT
Created
attachment 337376
[details]
Test reduction ssia.
Attachments
Test reduction
(954 bytes, text/html)
2018-04-06 10:53 PDT
,
alan
no flags
Details
Patch
(4.75 KB, patch)
2018-04-06 11:01 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-04-06 10:54:01 PDT
rdar://problem/34528716
alan
Comment 2
2018-04-06 11:01:27 PDT
Created
attachment 337377
[details]
Patch
WebKit Commit Bot
Comment 3
2018-04-06 12:31:21 PDT
Comment on
attachment 337377
[details]
Patch Clearing flags on attachment: 337377 Committed
r230349
: <
https://trac.webkit.org/changeset/230349
>
WebKit Commit Bot
Comment 4
2018-04-06 12:31:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug