Flex child does not get repainted when it is inserted back to the render tree. https://bugs.webkit.org/show_bug.cgi?id=184361 <rdar://problem/34528716>

Reviewed by Antti Koivisto.

Source/WebCore:

As with any regular block children, we should issue full repaint for flexbox items on their
first layout (see RenderBlockFlow::layoutBlockChild()).

Test: fast/flexbox/missing-repaint-when-flext-item-never-had-layout.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutAndPlaceChildren):

LayoutTests:

* fast/flexbox/missing-repaint-when-flext-item-never-had-layout-expected.txt: Added.
* fast/flexbox/missing-repaint-when-flext-item-never-had-layout.html: Added.


Canonical link: https://commits.webkit.org/199925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230349 268f45cc-cd09-0410-ab3c-d52691b4dbfc